# modal-rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TASKS.md  WORKING.md  project.md  rust-toolchain.toml
.claude/workflows/: app-local-connect-rename.js  bank-testing.js  build-modal-rust-sdk.js  burn-gpu-capstone.js  deploy-path.js  ergonomics-hardening.js  examples-readme-ergonomics.js  examples-use-macro.js  facade-local-orchestration.js  harden-image-upload.js  implement.js  macro-hygiene.js  materialize-workpads.js  mock-backend-port.js  mock-reuse-exploration.js  p10-remove-codegen.js  p4-dynamic-config-gpu.js  p6-cargo-cache.js  p9-cli-migration.js  plan-research.js  readme-examples-validation.js  refine-plan.js  remote-live-resilience.js  secrets-volumes.js  source-upload-remote.js  spawn-map.js
.cursor/commands/: next.md
.githooks/: pre-push
.github/workflows/: ci.yml
benchmarks/: README.md
crates/modal-rust/: Cargo.toml  README.md
crates/modal-rust-cli/: Cargo.toml  README.md
crates/modal-rust-cli/src/: describe_cache.rs  doctor.rs  main.rs  programmatic.rs  templates.rs  workspace.rs
crates/modal-rust-cli/src/templates/: call_app.py.tmpl  deploy_app.py.tmpl  dev_app.py.tmpl
crates/modal-rust-cli/tests/: describe_latency.rs
crates/modal-rust-macros/: Cargo.toml
crates/modal-rust-macros/src/: args.rs  cls.rs  emit.rs  lib.rs  specs.rs
crates/modal-rust-runtime/: Cargo.toml
crates/modal-rust-runtime/src/: lib.rs
crates/modal-rust-sdk/: Cargo.toml  NOTICE  README.md  build.rs
crates/modal-rust-sdk/src/: auth.rs  channel.rs  client.rs  codec.rs  config.rs  error.rs  lib.rs  pickle.rs  proto.rs  retry.rs
crates/modal-rust-sdk/src/ops/: app.rs  blob.rs  dict.rs  function.rs  image.rs  invoke.rs  local_dir.rs  mod.rs  mount.rs  planning.rs  queue.rs  secret.rs  transport.rs  volume.rs
crates/modal-rust-sdk/src/ops/function/: parse.rs  rpc.rs  spec.rs
crates/modal-rust-sdk/src/ops/image/: build.rs  render.rs
crates/modal-rust-sdk/tests/: live_auth.rs  live_create_invoke.rs  live_mount_upload.rs  mock_ops.rs
crates/modal-rust-testkit/: Cargo.toml  build.rs
crates/modal-rust-testkit/proto/: api.proto
crates/modal-rust-testkit/src/: builder.rs  lib.rs  macros.rs  proto.rs  record.rs  responder.rs  server.rs  servicer.rs  store.rs
crates/modal-rust/src/: app.rs  control_plane.rs  deploy.rs  dict.rs  dump.rs  env.rs  error.rs  function.rs  lib.rs  queue.rs  registration.rs  remote.rs  runner_gen.rs  scope.rs  volume.rs
crates/modal-rust/src/deploy/: wrapper.py  wrapper_test.py
crates/modal-rust/src/remote/: wrapper.py  wrapper_test.py
crates/modal-rust/tests/: cls.rs  deploy_wrapper_py.rs  live_auto_io.rs  live_burn.rs  live_cache.rs  live_deploy.rs  live_gpu.rs  live_remote.rs  live_secrets_volumes.rs  live_spawn_map.rs  local.rs  mock_dict_queue.rs  mock_remote.rs  mock_table.rs  mock_volume.rs  shadow_external_crate.rs
docs/: PARITY.md  ROADMAP.md  architecture-review.md  architecture.html  getting-started.md  index.html  local-build-coupling.html  precompile-builder-review.html
examples/: README.md
examples/add/: Cargo.toml  README.md
examples/add-macro/: Cargo.toml  README.md
examples/add-macro/src/: lib.rs  proof.rs
examples/add-macro/tests/: behavior.rs  config.rs  duplicate_rejected.rs
examples/add/src/: lib.rs
examples/autoscaling/: Cargo.toml  README.md
examples/autoscaling/src/: embedding.rs  lib.rs
examples/autoscaling/tests/: manifest.rs
examples/background-jobs/: Cargo.toml  README.md
examples/background-jobs/src/: lib.rs  work.rs
examples/background-jobs/tests/: local.rs
examples/burn-add/: Cargo.toml  README.md
examples/burn-add/src/: lib.rs
examples/burn-lm-bench/: .gitignore  Cargo.toml  README.md
examples/burn-lm-bench-client/: Cargo.toml
examples/burn-lm-bench-client/src/: main.rs
examples/burn-lm-bench/src/: lib.rs
examples/cli-workflow/: Cargo.toml  README.md
examples/cli-workflow/src/: lib.rs  summary.rs
examples/cpu-memory/: Cargo.toml  README.md
examples/cpu-memory/src/: compute.rs  lib.rs
examples/cpu-memory/tests/: local.rs  manifest.rs
examples/cuda-vector-add/: Cargo.toml  README.md
examples/cuda-vector-add/kernels/: vector_add.ptx
examples/cuda-vector-add/src/: lib.rs
examples/custom-base/: Cargo.toml  README.md
examples/custom-base/src/: checksum.rs  lib.rs
examples/custom-base/tests/: manifest.rs
examples/custom-types/: Cargo.toml  README.md
examples/custom-types/src/: lib.rs  scoring.rs
examples/custom-types/tests/: local.rs
examples/deploy-and-call/: Cargo.toml  README.md
examples/deploy-and-call/src/: lib.rs
examples/deploy-and-call/tests/: manifest.rs
examples/dict-kv/: Cargo.toml  README.md
examples/dict-kv/src/: lib.rs  scoring.rs
examples/dict-kv/tests/: mock_dict.rs
examples/error-handling/: Cargo.toml  README.md
examples/error-handling/src/: account.rs  lib.rs
examples/error-handling/tests/: local.rs
examples/fan-out-map/: Cargo.toml  README.md
examples/fan-out-map/src/: lib.rs  reading.rs
examples/fan-out-map/tests/: local.rs
examples/orchestrate/: Cargo.toml  README.md
examples/orchestrate/src/: main.rs
examples/pip-apt-image/: Cargo.toml  README.md
examples/pip-apt-image/src/: lib.rs
examples/pip-apt-image/tests/: manifest.rs
examples/queue-pipeline/: Cargo.toml  README.md
examples/queue-pipeline/src/: collatz.rs  lib.rs
examples/queue-pipeline/tests/: mock_queue.rs
examples/quickstart/: Cargo.toml  README.md
examples/quickstart/src/: lib.rs
examples/quickstart/tests/: local.rs  readme_drift.rs
examples/retries/: Cargo.toml  README.md
examples/retries/src/: downstream.rs  lib.rs
examples/retries/tests/: manifest.rs
examples/scheduled-job/: Cargo.toml  README.md
examples/scheduled-job/src/: lib.rs  report.rs
examples/scheduled-job/tests/: manifest.rs
examples/secrets/: Cargo.toml  README.md
examples/secrets/src/: lib.rs
examples/secrets/tests/: local.rs  manifest.rs
scripts/: check-examples.sh  ci-gate.sh
workpads/: README.md  WORKPADS.md
(+98 files in other folders)
