[workspace]
resolver = "2"
members = [
    "crates/modal-rust-sdk",
    "crates/modal-rust",
    "crates/modal-rust-runtime",
    "crates/modal-rust-cli",
    "crates/modal-rust-macros",
    # Dev/test-only in-process gRPC mock backend. A workspace MEMBER (so it builds
    # and is testable) but deliberately NOT in `default-members`: it pulls the tonic
    # server + axum stack, which bare `cargo build`/`clippy`/`test` should not carry.
    # The offline gate runs it explicitly with `-p modal-rust-testkit`. No SHIPPED
    # crate depends on it — it is a `[dev-dependencies]` of the facade/SDK test
    # targets only.
    "crates/modal-rust-testkit",
    "examples/add",
    "examples/add-macro",
    "examples/orchestrate",
    "examples/cuda-vector-add",
    "examples/burn-add",
]

# `example-burn-add` is GPU/CUDA-only: it pulls `cubecl-cuda`, which only compiles
# against a CUDA toolkit (present on Modal's Tier-1 image, absent on a typical dev
# box / this macOS host). It stays a workspace MEMBER so the Modal shim can build it
# with `-p example-burn-add`, but it is excluded from `default-members` so bare
# `cargo build`/`test`/`clippy` and CI stay green without CUDA. Build it explicitly
# on a CUDA host or on Modal. (`example-cuda-vector-add` uses cudarc dynamic-loading,
# which links with no CUDA at build time, so it stays in the default set.)
default-members = [
    "crates/modal-rust-sdk",
    "crates/modal-rust",
    "crates/modal-rust-runtime",
    "crates/modal-rust-cli",
    "crates/modal-rust-macros",
    "examples/add",
    "examples/add-macro",
    "examples/orchestrate",
    "examples/cuda-vector-add",
]

# M0 build-profile constraint (boundaries.md §6): `catch_unwind` requires the
# unwind panic strategy. A user's `panic = "abort"` would silently degrade the
# `panic` error kind into a raw process abort. Pin unwind for the workspace so
# the runner's panic capture is guaranteed to work.
[profile.release]
panic = "unwind"

[profile.dev]
panic = "unwind"
