[package]
name = "modal-rust-cli"
version = "0.1.0-alpha.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nicolaslara/modal-rust"
readme = "README.md"
description = "The `modal-rust` binary: drives the programmatic SDK/facade (run/deploy/call via `modal_runner --describe` + crates/modal-rust) — no codegen, no `modal` CLI. clap lives here (CLI-only), never in the runtime."

[[bin]]
name = "modal-rust"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
# The default (programmatic) path drives the facade's App orchestration directly
# (P9 §C.1) — no codegen, no `modal` CLI. The CLI TALKS to Modal (connect/run/deploy/
# call), so it enables the facade's non-default `client` feature, which pulls the SDK
# (tonic/hyper/prost/reqwest). The async facade ops run under a tokio runtime. (The
# LIGHT describe helpers — resolve_runner_target/materialize_shadow/
# describe_cache_inputs — are available regardless of the feature.)
modal-rust = { path = "../modal-rust", version = "0.1.0-alpha.2", features = ["client"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# Content-address the describe MANIFEST CACHE key (describe_cache.rs): a SHA-256 over the
# closure source + Cargo.lock + the package/path decision keys the cached `--describe`
# manifest under <target>/.modal-rust/. Already in the lockfile via the SDK upload path.
sha2 = "0.10"

[dev-dependencies]
# Used by the describe_latency integration test for the key-change proof.
sha2 = "0.10"
