[package]
name = "modal-rust-macros"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nicolaslara/modal-rust"
description = "Additive proc-macro sugar for modal-rust: #[modal_rust::function] expands to the SAME typed!() wrapper + an inventory::submit! registration the manual Registry path produces. Changes no runner protocol."

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
# Resolve the import name of the `modal-rust` facade in the USER crate's Cargo.toml at
# expansion time, so the macro can route every `::modal_rust_runtime` / `::inventory`
# path THROUGH the facade (`::<facade>::__private::…`). Honors a rename (e.g. the
# `modal_rust_facade` alias) and the in-workspace `FoundCrate::Itself` case. This is
# the serde_derive / clap_derive single-dep pattern.
proc-macro-crate = "3"
