[package]
name = "modal-rust-runtime"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nicolaslara/modal-rust"
description = "modal-rust runtime: Registry, typed!() macro, JSON Codec, HandlerFn, and the runner CLI protocol. Zero Modal/network/Python deps."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
# `inventory` supports optional dispatch-only runtime registrations. The
# user-facing `#[modal_rust::function]` macro submits a facade-owned atomic record
# instead, so Modal control-plane metadata stays out of this crate.
inventory = "0.3"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
