[package]
name = "modal-rust"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Ergonomic user-facing facade for modal-rust: App/Function handles with in-process .local() (frozen Registry) and the locked .remote()/.spawn()/.map() async surface. Re-exports modal_rust_sdk as `sdk`."
publish = false

[lib]
name = "modal_rust"

[features]
# Opt-in live Modal round-trip test for `.remote()`. Gated so the no-CUDA CI box
# NEVER runs it; enable locally with `--features live`.
live = []

[dependencies]
modal-rust-sdk     = { path = "../modal-rust-sdk" }
modal-rust-runtime = { path = "../modal-rust-runtime" }
# Re-exported so users can spell `#[modal_rust::function]` (see lib.rs caveat).
modal-rust-macros  = { path = "../modal-rust-macros" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
# Rewrite the uploaded workspace Cargo.toml's `members`/`default-members` to the
# cargo-metadata closure subset (preserving `[profile]` + comments) so the scoped
# upload is a self-consistent workspace cargo can load. Format-preserving editor.
toml_edit  = "0.22"
# `sync` for the RemoteHandle Mutex<ModalClient> + the function_id OnceCell;
# `rt`/`macros` so the async `.remote()` surface is drivable.
tokio = { version = "1", features = ["sync", "rt", "macros"] }

[dev-dependencies]
# The real .local() proof: example-add::modal_registry() gives a frozen Registry.
# Acyclic — example-add depends only on modal-rust-runtime, never on modal-rust.
example-add = { path = "../../examples/add" }
# The decorator/inventory path proof for `App::from_inventory().config_for(..)`:
# example-add-macro's `#[modal_rust::function(gpu="T4", ..)]` submissions are linked
# into the test binary so the inventory pass surfaces their FunctionConfig. Acyclic
# — example-add-macro depends only on the runtime/macros/inventory, never modal-rust.
example-add-macro = { path = "../../examples/add-macro" }
# Live GPU proof (tests/live_gpu.rs, behind `live` + `#[ignore]`): a decorated
# `#[modal_rust::function(gpu="T4", name="vector_add")]` in the test binary drives
# `App::from_inventory().remote(..)` so the decorator-sourced gpu_config rides into
# FunctionCreate against the cuda-vector-add package on a real T4.
modal-rust-macros = { path = "../modal-rust-macros" }
inventory = "0.3"
