[package]
name = "modal-rust"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nicolaslara/modal-rust"
description = "Ergonomic user-facing facade for modal-rust: App/Function handles with in-process .local() (frozen Registry) and the locked .remote()/.spawn()/.map() async surface. Re-exports modal_rust_sdk as `sdk`."

[lib]
name = "modal_rust"

[features]
# DEFAULT = LIGHT. Authoring a `#[modal_rust::function]` crate, `.local()`, and the
# in-container `modal_runner` build need NO gRPC client — so the SDK (tonic/hyper/
# prost/reqwest) is an OPTIONAL dep, OFF by default. This collapses the default build
# from ~154 crates to ~9.
default = []
# The gRPC control-plane client (talk to Modal). NON-DEFAULT: a crate that only
# AUTHORS `#[function]`s + uses `.local()` compiles tonic-free. Turning it on pulls
# `modal-rust-sdk` and lights up every gRPC touchpoint: `App::connect*`,
# `.remote()/.spawn()/.map()/.starmap()/.for_each()/.spawn_map()`, `FunctionCall::get`,
# `deploy`/`call`, `remote_envelope`/`call_envelope`, AND the offline
# `dry_run`/`dump_deploy_manifest` dump (offline, but it compiles against SDK
# spec/planning TYPES). The `modal-rust` CLI enables this for you.
client = ["dep:modal-rust-sdk", "tokio/sync"]
# Opt-in live Modal round-trip test for `.remote()`. Gated so the no-CUDA CI box
# NEVER runs it; enable locally with `--features live`. Now REQUIRES `client` (the
# live tests do real `.remote()`/`deploy`/`connect`).
live = ["client"]
# TEST-ONLY seam: exposes `App::connect_at` / `App::connect_at_with`, which point a
# real facade `App` at an explicit `server_url` (e.g. the in-process mock from
# `modal-rust-testkit`) with dummy creds. NOT part of the shipped public API — it is
# additive and gated so a normal `cargo build` never surfaces it. Enabled for the
# facade's own test/integration targets via the self dev-dependency below; no SHIPPED
# crate enables it. Now REQUIRES `client` (it builds a real `ModalClient` pointed at
# the mock).
testkit = ["client"]

[dependencies]
# OPTIONAL: pulled in only by the `client` feature (was unconditional). A crate that
# only authors `#[function]`s + uses `.local()` never links tonic/hyper/prost/reqwest.
modal-rust-sdk     = { path = "../modal-rust-sdk", version = "0.1.0-alpha.1", optional = true }
modal-rust-runtime = { path = "../modal-rust-runtime", version = "0.1.0-alpha.1" }
# Re-exported so users can spell `#[modal_rust::function]` (see lib.rs caveat).
modal-rust-macros  = { path = "../modal-rust-macros", version = "0.1.0-alpha.1" }
# Re-exported under `__private::inventory` so the macro's single
# `inventory::submit!{ Registration { handler, config, package } }` resolves THROUGH
# the facade — a macro-using crate needs no direct `inventory` dep (serde_derive
# pattern). The collected type is facade-owned so dispatch and control-plane metadata
# are registered atomically.
inventory  = "0.3"
base64     = "0.22"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
# Rewrite the uploaded workspace Cargo.toml's `members`/`default-members` to the
# cargo-metadata closure subset (preserving `[profile]` + comments) so the scoped
# upload is a self-consistent workspace cargo can load. Format-preserving editor.
# Used by the LIGHT scope.rs/runner_gen.rs, so it stays unconditional.
toml_edit  = "0.22"
# NON-OPTIONAL (light) because `__private::web_server_block_on` — the `#[web_server]`
# launcher's `async fn serve(port)` driver — must exist IN-CONTAINER, where the `client`
# feature is OFF. So the facade always carries a small `rt-multi-thread` runtime (still
# no tonic/hyper/prost/reqwest). The `client` feature ADDS `tokio/sync` for the
# `RemoteHandle` `Mutex<ModalClient>`/`OnceCell<String>` + the async client ops; the base
# `rt`/`rt-multi-thread`/`macros` already cover both the launcher and the async
# `.remote()` surface.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
# Content-address the injected `modal_runner.rs` in the wire-delta mock test
# (`run_injects_generated_runner_bin_when_absent`): the mock's `mount_put_file`
# returns `exists=true` after a PROBE, so the bytes are proven via the MountFile's
# `sha256_hex` matching `sha256(render_runner_main(..))`. Already in the lockfile via
# the SDK upload path; pulled in directly here only for the test.
sha2 = "0.10"
# The `#[cls]` macro-expansion test (tests/cls.rs) authors a `#[cls] impl` exactly as
# a user would (`#[enter] fn load() -> anyhow::Result<Self>`), so the test target needs
# `anyhow` directly — the SAME single-dep contract a real `#[cls]`/`#[function]` user
# crate has (`modal-rust` + `serde` + `anyhow`). The generated code routes `::anyhow::`
# paths, matching that contract.
anyhow = "1"
# Self dev-dependency: activates the `testkit` feature for the facade's OWN
# test/integration/example targets ONLY (cargo merges a self dev-dep's features
# into the crate under test for those targets). This is how the mock-backend
# example tests reach `App::connect_at*` WITHOUT exposing the seam in `cargo build`
# or to any downstream/shipped crate. No SHIPPED crate depends on this.
modal-rust = { path = ".", features = ["testkit"] }
# The in-process Modal gRPC mock backend (dev/test-only; never shipped). Drives the
# mock-backend example tests (tests/mock_remote.rs, tests/mock_table.rs).
modal-rust-testkit = { path = "../modal-rust-testkit" }
# The real .local() proof: example-add::modal_registry() gives a frozen Registry.
# Acyclic — example-add depends only on modal-rust-runtime, never on modal-rust.
example-add = { path = "../../examples/add" }
# The decorator path proof for `App::local().config_for(..)`:
# example-add-macro's `#[modal_rust::function(gpu="T4", ..)]` submissions are linked
# into the test binary so the inventory pass surfaces their FunctionConfig. Acyclic
# — example-add-macro depends only on the runtime/macros/inventory, never modal-rust.
example-add-macro = { path = "../../examples/add-macro" }
# Live GPU proof (tests/live_gpu.rs, behind `live` + `#[ignore]`): a decorated
# `#[modal_rust::function(gpu="T4", name="vector_add")]` in the test binary drives
# `App::connect(..).remote(..)` so the decorator-sourced gpu_config rides into
# FunctionCreate against the cuda-vector-add package on a real T4.
modal-rust-macros = { path = "../modal-rust-macros" }
