[package]
name = "example-add-macro"
version = "0.0.0"
edition = "2021"
description = "The macro-path twin of examples/add: #[modal_rust::function] registers `add` via inventory, producing the SAME Registry/HandlerFn shape and runner protocol as the manual typed! path (ergonomics E1)."
publish = false

[lib]
name = "example_add_macro"
path = "src/lib.rs"

[[bin]]
name = "modal_runner"
path = "src/bin/modal_runner.rs"

[dependencies]
modal-rust-runtime = { path = "../../crates/modal-rust-runtime" }
modal-rust-macros = { path = "../../crates/modal-rust-macros" }
# The macro's auto-I/O (Mode B) `app.<fn>(..)` methods expand to
# `::modal_rust_facade::{App, TypedCall}`. The facade crate is `modal-rust`, but this
# crate aliases the MACRO crate as `modal_rust` (`extern crate modal_rust_macros as
# modal_rust;` below) so the attribute is spellable as `#[modal_rust::function]`; that
# alias shadows `::modal_rust`. So the facade is brought in under the unshadowed
# RENAMED name `modal_rust_facade` (Cargo's `package = "..."` lets the same crate be
# referred to by a different extern name). See the macro crate docs (spec §2).
modal_rust_facade = { path = "../../crates/modal-rust", package = "modal-rust" }
# `inventory::submit!` is emitted by the macro; the user crate must carry the
# `inventory` dependency (boundaries.md §3, ergonomics E1).
inventory = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
