[package]
name = "example-add-macro"
version = "0.0.0"
edition = "2021"
description = "The macro-path twin of examples/add: #[modal_rust::function] registers `add` via inventory, producing the SAME Registry/HandlerFn shape and runner protocol as the manual typed! path (ergonomics E1)."
publish = false

[lib]
name = "example_add_macro"
path = "src/lib.rs"

[dependencies]
# SINGLE modal dependency: the `modal-rust` facade, under its OWN name (NO rename).
# A fresh external user writes exactly this. The `#[modal_rust::function]` macro
# routes every emitted path through the facade (`::modal_rust::__private::{runtime,
# inventory}::…` for the runtime/`inventory` items, `::modal_rust::{App, TypedCall}`
# for the Mode B typed methods), resolving the facade name via `proc-macro-crate` —
# so this crate needs NEITHER `modal-rust-runtime` NOR `inventory` as a direct
# dependency (the serde_derive / clap_derive single-dep pattern).
#
# Historically this dep was renamed `modal_rust_facade` to dodge an `extern crate
# modal_rust_macros as modal_rust` shadow; that shadow is gone, so `use
# modal_rust::function;` + `#[modal_rust::function]` against the plain `modal-rust`
# dep compiles with NO rename — exactly the README form.
modal-rust = { path = "../../crates/modal-rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
