[package]
name = "example-add"
version = "0.0.0"
edition = "2021"
description = "The modal-rust walking-skeleton example: add(a,b) plus test entrypoints exercising every runner error kind."
publish = false

[lib]
name = "example_add"
path = "src/lib.rs"

# MANUAL reference: hand-built Registry (no inventory, no `modal-rust` facade), so the
# tooling cannot generate a `modal_runner` for it. The bin is named `add-runner` (NOT
# `modal_runner`) so it never collides with the generated/own `modal_runner` bins the
# rest of the workspace uses (cargo#6313 output-filename collision).
[[bin]]
name = "add-runner"
path = "src/bin/add_runner.rs"

[dependencies]
modal-rust-runtime = { path = "../../crates/modal-rust-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
