[package]
name = "example-autoscaling"
version = "0.0.0"
edition = "2021"
description = "Teaches ONE concept: control warm capacity + scale-to-zero with the autoscaler decorator knobs (`#[modal_rust::function(min_containers = 1, max_containers = 10, buffer_containers = 2, scaledown_window = 120)]`). The decorator IS the config — the facade rides these into the FunctionCreate manifest's `autoscaler_settings` (floor/ceiling/warm buffer + idle-before-scaledown window), mirroring Modal's `min_containers`/`max_containers`/`buffer_containers`/`scaledown_window` kwargs, so Modal keeps a warm floor for instant responses and scales to zero when idle."
publish = false

[lib]
name = "example_autoscaling"
path = "src/lib.rs"

[dependencies]
# SINGLE modal dependency — exactly what a fresh external user writes. The
# `#[modal_rust::function]` macro routes its generated code through this facade, so
# there is no `modal-rust-runtime` / `inventory` to add and no rename.
modal-rust = { path = "../../crates/modal-rust" }
serde = { version = "1", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
# The example LIB is a pure `#[modal_rust::function]` library and stays LIGHT (no gRPC
# client) so the in-container `--bin modal_runner` build is tonic-free. Only the
# OFFLINE manifest test (`tests/manifest.rs`) needs the dump (`dry_run` +
# RemoteConfig/PlannedRequest), which lives behind the facade `client` feature — so we
# enable it on a SECOND, dev-only dependency edge. Cargo unifies a crate's own deps +
# dev-deps only when BUILDING TESTS, so the standalone lib build (and the remote runner
# build) stays light while the test target gets `client`.
modal-rust = { path = "../../crates/modal-rust", features = ["client"] }
