[package]
name = "example-background-jobs"
version = "0.0.0"
edition = "2021"
description = "Teaches ONE concept: fire-and-forget with .spawn() — start a longer job, get a handle back immediately, then poll it with .get(timeout) for the result, via the string-keyed app.function(\"run_job\") handle the macro registers."
publish = false

[lib]
name = "example_background_jobs"
path = "src/lib.rs"

[[bin]]
# The driver tour: the offline `.local()` run executes in `cargo run`; the live
# `.spawn()` + `.get(timeout)` fire-and-forget shape compiles always, runs only with
# Modal credentials.
name = "background_jobs"
path = "src/bin/background_jobs.rs"

[dependencies]
# SINGLE modal dependency — exactly what a fresh external user writes. The
# `#[modal_rust::function]` macro routes its generated code through this facade, so
# there is no `modal-rust-runtime` / `inventory` to add and no rename.
modal-rust = { path = "../../crates/modal-rust", features = ["client"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
# `.spawn()` / `.get(timeout)` are async; the driver drives them with a tokio runtime.
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
